fix overflow issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .App {
-  
+  width: 100vw;
+	overflow-x: hidden;
 }
 
 header {
